kubernetes/apps/n8n/n8n-service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: apps
  labels:
    app.kubernetes.io/name: n8n
spec:
  ports:
  - port: 5678
    targetPort: 5678
    name: http
  selector:
    app: n8n
