kubernetes/apps/n8n/n8n-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`n8n.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer}, {name: authelia}]
    services: [{name: n8n, port: 5678}]
